--- a/shower/themes/material/styles/slide/content/footer.css
+++ b/shower/themes/material/styles/slide/content/footer.css
@@ -6,8 +6,10 @@
     bottom: 0;
     left: 0;
     z-index: 1;
-    padding: 48px 112px 24px 96px;
-    background-color: var(--color-yellow-light);
+    padding:
+        48px var(--slide-right-side)
+        24px var(--slide-left-side);
+    background-color: var(--color-yellow);
     transition: transform 0.3s;
 }
 
