--- a/shower/themes/ribbon/styles/slide/slide.css
+++ b/shower/themes/ribbon/styles/slide/slide.css
@@ -35,10 +35,10 @@
     z-index: 0;
     overflow: hidden;
     box-sizing: border-box;
-    padding: 75px 100px 0;
+    padding: 75px var(--slide-side) 0;
     width: var(--slide-width);
     height: var(--slide-height);
-    background: #ffffff;
+    background-color: white;
 }
 
 /* Number */
@@ -53,7 +53,7 @@
     height: calc(var(--ribbon-size) * 2);
     background-image: url('ribbon.svg');
     background-size: cover;
-    color: #ffffff;
+    color: white;
     counter-increment: slide;
     content: counter(slide);
     text-align: center;
